footer should go in the layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,5 +39,22 @@
         <br/>          
 
         {{ content }}
+                
+        <br/>
+        <div class="container">
+            <div class="row">
+                <div class="twelvecol last">
+                    <div class="background">
+                        <small>
+                            All texts provided under the license:
+                            <a href="http://creativecommons.org/licenses/by/2.5/ar/">Creative Commons Atribución 2.5 Argentina</a>. &nbsp;
+                            <a target="_blank" class="cc_by_img" href="http://creativecommons.org/licenses/by/2.5/ar/">
+                                <img src="http://www.creativecommons.org.ar/media/local_themes/custom_theme/images/cc_ar/by-sa.png" alt="Creative Commons Atribución 2.5 Argentina">
+                            </a>
+                        </small>
+                    </div>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
