trying the google +1 button

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html itemscope itemtype="http://schema.org/Blog">
   <head>
     <title>{{page.title}} - Nicolas Oga's Web Blog</title>
     <meta charset="utf-8" />
