--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,13 +4,13 @@ layout: default
 
 <div class="container">
 	<div class="row">
-		<div class="twocol">
+		<div class="threecol">
 			<div class="background">
 				<div class="g-plusone" data-annotation="inline" data-width=""></div>
 			</div>
 		</div>
 
-		<div class="tencol last">
+		<div class="nine last">
 			<div class="background">
 				<h2><a href="{{ page.url }}">{{ page.title }}</a></h2>
 				<strong>
