--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,7 +10,7 @@ layout: default
 			</div>
 		</div>
 
-		<div class="nine last">
+		<div class="ninecol last">
 			<div class="background">
 				<h2><a href="{{ page.url }}">{{ page.title }}</a></h2>
 				<strong>
