--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,10 @@
 		margin-bottom: 20px;
 	}
 
+	p {
+		margin: 20px 5px;
+	}
+
 	a {
 		color: #4a4;
 	}
@@ -67,6 +71,9 @@
 		font-weight: bold;
 	}
 	
+	.hidden {
+		visibility: hidden;
+	}
 
 /* ============================= */
 /* ! Layout for mobile version   */
