--- a/css/styles.css
+++ b/css/styles.css
@@ -41,8 +41,9 @@
 	}
 
 	.background {
-		border: 8px dashed #ada;
+		border: 8px #000;
 		padding: 15px;
+		margin: 10 px;
 		background-color: white;
 
 	}
