--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,72 +1,77 @@
-<!DOCTYPE html>
-<html itemscope itemtype="http://schema.org/Blog">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html>
   <head>
-    <title>{{page.title}} - Nicolas Oga's Web Blog</title>
-    <meta charset="utf-8" />
-    <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <meta name="author" content="Nicolas Oga" />
-    <meta name="copyright" content="Licensed under GPL and MIT." />
-    <meta name="description" content="I <3 Ruby" />
-    <link href='http://fonts.googleapis.com/css?family=Alfa+Slab+One' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="/css/autumn.css" />
-    <link rel="alternate" type="application/atom+xml" href="http://feeds.feedburner.com/EmmanuelOga" title="Atom Feed">
-    <link rel="alternate" type="application/rss+xml"  href="http://feeds.feedburner.com/EmmanuelOga" title="RSS Feed">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- 1140px Grid styles for IE -->
-    <!--[if lte IE 9]><link rel="stylesheet" href="/css/ie.css" type="text/css" media="screen" /><![endif]-->
-
-    <!-- The 1140px Grid - http://cssgrid.net/ -->
-    <link rel="stylesheet" href="/css/1140.css" type="text/css" media="screen" />
-    <!-- Your styles -->
-    <link rel="stylesheet" href="/css/styles.css" type="text/css" media="screen" />
-    <!--css3-mediaqueries-js - http://code.google.com/p/css3-mediaqueries-js/ - Enables media queries in some unsupported browsers-->
-    <script type="text/javascript" src="/js/css3-mediaqueries.js"></script>
-    </head>
-
-    <body>
-        <br/>
-
-        <div class="container">
-            <div class="row">
-                <div class="twelvecol last">
-                    <div class="background">
-                        <h1 class="logo"><a href="/">NicoOga.com</a></h1>
-                    </div>
-                </div>
+    <title>{{ page.title }}</title>
+    {%include_css bootstrap%}
+    {%include_css autumn%}
+    {%include_css blog%}
+    {%include_css http://fonts.googleapis.com/css?family=Dosis|ABeeZeeblog%}
+    {%include_js bootstrap%}
+    {%include_js ganalytics%}
+  </head>
+  <body>
+    <div class='wrapper'>
+      <div class='container-fluid'>
+        <div class='row-fluid'>
+          <div class='span3 center'>
+            <div class='golden'>
+              <div class='big-chunk'></div>
+              <img class='img-polaroid' src='http://s.gravatar.com/avatar/200edcf296d9c93388dc1daae2246984?s=290' />
+              <div class='page-header'>
+                <h2>
+                  Nicolas Oga
+                  <small>My blog</small>
+                </h2>
+              </div>
+              <div class='justify'>
+                <h3>Posts</h3>
+                <ul class='nav nav-pills nav-stacked red'>
+                  {% for post in site.posts %}
+                  <li>
+                    <a class='act' href='{{post.url}}'>{{post.title}}</a>
+                  </li>
+                  {% endfor %}
+                </ul>
+              </div>
             </div>
-        </div>
-        
-        <br/>          
-
-        {{ content }}
-                
-        <br/>
-        <div class="container">
-            <div class="row">
-                <div class="twelvecol last">
-                    <div class="background">
-                        <small>
-                            All texts provided under the license:
-                            <a href="http://creativecommons.org/licenses/by/2.5/ar/">Creative Commons Atribución 2.5 Argentina</a>. &nbsp;
-                            <a target="_blank" class="cc_by_img" href="http://creativecommons.org/licenses/by/2.5/ar/">
-                                <img src="http://www.creativecommons.org.ar/media/local_themes/custom_theme/images/cc_ar/by-sa.png" alt="Creative Commons Atribución 2.5 Argentina">
-                            </a>
-                        </small>
-                    </div>
-                </div>
+            <div class='chunk'></div>
+            <div class='me justify'>
+              <p>I'm a web developer with base at Buenos Aires, Argetina, and this is a little place to publish a little bit about what I'm wasting most of my time during the week. Don't expect nothing particularly good.</p>
             </div>
+          </div>
+          <div class='span8'>
+            <div class='big-chunk'></div>
+            <div class='page-header'>
+              <h1>{{ page.title }}</h1>
+            </div>
+            <div class='post'>{{ content }}</div>
+          </div>
         </div>
-
-        <script type="text/javascript">
-          var _gaq = _gaq || [];
-          _gaq.push(['_setAccount', 'UA-28307784-1']);
-          _gaq.push(['_trackPageview']);
-
-          (function() {
-            var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-            ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-            var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-          })();
-        </script>
-    </body>
+        <!-- Plz don't look here, this is a mess :/ -->
+        <!-- TODO: clean up -->
+      </div>
+      <div class='chunk'></div>
+      <div class='push'></div>
+    </div>
+    <div class='footer'>
+      <div class='center'>
+        <div class='row'>
+          <a class='act' href='https://github.com/nicooga'>Git Repos</a>
+          |
+          <a class='act' href='http://stackoverflow.com/users/1740079/nicooga'>Stackoverflow</a>
+          |
+          <a class='act' href='http://www.linkedin.com/profile/view?id=109143988&amp;trk=tab_pro'>Linkedin</a>
+          |
+          <a class='act' href='mailto:2112.oga@gmail.com'>MailMe</a>
+        </div>
+        <div class='chunk'></div>
+        <div class='row'>
+          <div class='act' href='http://creativecommons.org/licenses/by/2.5/ar/deed.en'>Creative Commons Attribution 2.5 Argentina</div>
+          <a class='cc_by_img' href='http://creativecommons.org/licenses/by/2.5/ar/deed.en' target='_blank'>
+            <img alt='Creative Commons Attribution 2.5 Argentina' src='http://i.creativecommons.org/l/by-sa/2.5/ar/88x31.png' />
+          </a>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
