Trying to fix git not diplaying the page correctly

--- a/_layouts/haml/default.haml
+++ b/_layouts/haml/default.haml
@@ -36,8 +36,10 @@
           .span8
             .big-chunk
             .page-header
-              %h1 {{ page.title }}
-            .post {{ content }}
+              %h1 
+                {{ site.posts.first.title }}
+                %small {{ site.posts.first.date | date_to_long_string }}
+            .post {{ site.posts.first.content }}
       
         <!-- Plz don't look here, this is a mess :/ -->
         <!-- TODO: clean up -->
