--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
   <head>
-    <title>{{ page.title }}</title>
-    {%include_css bootstrap%}
-    {%include_css autumn%}
-    {%include_css blog%}
-    {%include_css http://fonts.googleapis.com/css?family=Dosis|ABeeZeeblog%}
-    {%include_js bootstrap%}
-    {%include_js ganalytics%}
+    <title>Tablizer, table generator for ruby</title>
+    <link href="/css/bootstrap.css" media="screen" rel="stylesheet" type="text/css">
+    <link href="/css/autumn.css" media="screen" rel="stylesheet" type="text/css">
+    <link href="/css/blog.css" media="screen" rel="stylesheet" type="text/css">
+    <link href="http://fonts.googleapis.com/css?family=Dosis|ABeeZeeblog.css" media="screen" rel="stylesheet" type="text/css">
+    <script type="text/javascript" async="" src="http://www.google-analytics.com/ga.js"></script><script src="/js/bootstrap.js" type="text/javascript"></script>
+    <script src="/js/ganalytics.js" type="text/javascript"></script>
   </head>
   <body>
     <div class='wrapper'>
@@ -42,9 +42,12 @@
           <div class='span8'>
             <div class='big-chunk'></div>
             <div class='page-header'>
-              <h1>{{ page.title }}</h1>
+              <h1>
+                {{ site.posts.first.title }}
+                <small>{{ site.posts.first.date | date_to_long_string }}</small>
+              </h1>
             </div>
-            <div class='post'>{{ content }}</div>
+            <div class='post'>{{ site.posts.first.content }}</div>
           </div>
         </div>
         <!-- Plz don't look here, this is a mess :/ -->
