--- a/_layouts/haml/post.haml
+++ b/_layouts/haml/post.haml
@@ -36,7 +36,9 @@
           .span8
             .big-chunk
             .page-header
-              %h1 {{ page.title }}
+              %h1 
+                {{ page.title }}
+                %small {{ page.date | date_to_long_string }}
             .post {{ content }}
       
         <!-- Plz don't look here, this is a mess :/ -->
