--- a/_layouts/haml/post.haml
+++ b/_layouts/haml/post.haml
@@ -6,8 +6,6 @@
     {%include_css autumn%}
     {%include_css blog%}
     {%include_css http://fonts.googleapis.com/css?family=Dosis|ABeeZeeblog%}
-    {%include_js bootstrap%}
-    {%include_js ganalytics%}
 
   %body
     .wrapper
@@ -16,7 +14,7 @@
           .span3.center
             .golden
               .big-chunk
-              %img.img-polaroid{src: 'http://s.gravatar.com/avatar/200edcf296d9c93388dc1daae2246984?s=290'}
+              %img.img-polaroid{src: 'http://s.gravatar.com/avatar/200edcf296d9c93388dc1daae2246984?s=300', style: 'width: 80%;'}
               
               .page-header
                 %h2 
@@ -31,15 +29,15 @@
                   {% endfor %}
             .chunk
             .me.justify
-              %p I'm a web developer with base at Buenos Aires, Argetina, and this is a little place to publish a little bit about what I'm wasting most of my time during the week. Don't expect nothing particularly good. 
+              %p I'm a web developer with base at Buenos Aires, Argetina, and this is a little place to publish a bit about what I'm wasting most of my time during the week. Don't expect nothing particularly good. 
 
-          .span8
+          .span8.post
             .big-chunk
             .page-header
               %h1 
-                {{ page.title }}
-                %small {{ page.date | date_to_long_string }}
-            .post {{ content }}
+                {{ site.posts.first.title }}
+                %small {{ site.posts.first.date | date_to_long_string }}
+            .post {{ site.posts.first.content }}
       
         <!-- Plz don't look here, this is a mess :/ -->
         <!-- TODO: clean up -->
@@ -62,3 +60,8 @@
           .act{:href => 'http://creativecommons.org/licenses/by/2.5/ar/deed.en'} Creative Commons Attribution 2.5 Argentina |
           %a.cc_by_img{:href => "http://creativecommons.org/licenses/by/2.5/ar/deed.en", :target => "_blank"}
             %img{:alt => "Creative Commons Attribution 2.5 Argentina", :src => "http://i.creativecommons.org/l/by-sa/2.5/ar/88x31.png"}
+    
+    / Scripts
+    {%include_js jquery%}
+    {%include_js bootstrap%}
+    {%include_js ganalytics%}
